--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,40 +2,28 @@
   "name": "urss-telemetry-ui",
   "version": "1.0.0",
   "description": "The Telemetry UI for Rochester Solar Splash.",
-  "main": ".vite/build/main.js",
+  "main": "index.html",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/URSolarSplash/Telemetry-UI.git"
   },
-  "author": "Chris Dalke & Andrew Gutierrez",
+  "author": "Leon Zong & Chris Dalke & Andrew Gutierrez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/URSolarSplash/Telemetry-UI/issues"
   },
   "homepage": "https://github.com/URSolarSplash/Telemetry-UI#readme",
   "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "@electron-forge/plugin-vite": "^7.2.0",
-    "electron": "28.2.3"
   },
   "dependencies": {
     "chartjs": "^0.3.24",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-plugin-streaming": "^2.0.0",
-    "electron-squirrel-startup": "^1.0.0",
     "jquery": "latest",
     "vite": "^5.1.3"
   }
