--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "The Telemetry UI for Rochester Solar Splash.",
   "main": "index.html",
+  "type":"module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
